@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.pdx.cs410J</groupId>
-  <version>Summer2018</version>
+  <version>Summer2019</version>
   <artifactId>CS410J</artifactId>
   <packaging>pom</packaging>
   <name>CS410J Java Example Code</name>
@@ -13,7 +13,6 @@
     <module>web</module>
     <module>family</module>
     <module>grader</module>
-    <module>gwt-parent</module>
     <module>projects-parent</module>
   </modules>
   <inceptionYear>2000</inceptionYear>
@@ -204,7 +203,6 @@
         <configuration>
           <!-- Let reflection code run in Java 10 -->
           <argLine>
-            --add-modules java.xml.bind
             --add-opens java.base/java.lang=ALL-UNNAMED
             --add-opens java.base/java.util=ALL-UNNAMED
             --illegal-access=deny
@@ -253,7 +251,6 @@
           <target>${maven.compiler.target}</target>
           <fork>true</fork>
           <compilerArgs>
-            <arg>--add-modules=java.xml.bind</arg>
             <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
             <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
           </compilerArgs>
@@ -285,9 +282,6 @@
             <additionalClasspathElements>
               <additionalClasspathElement>${project.build.directory}/test-classes</additionalClasspathElement>
             </additionalClasspathElements>
-            <excludes>
-              <exclude>**/*GwtIT.*</exclude>
-            </excludes>
           </configuration>
           <executions>
             <execution>
@@ -311,7 +305,7 @@
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.8.1</version>
+          <version>0.8.4</version>
           <executions>
             <execution>
               <id>default-prepare-agent</id>
@@ -409,22 +403,7 @@
         <plugin>
           <groupId>com.github.spotbugs</groupId>
           <artifactId>spotbugs-maven-plugin</artifactId>
-          <version>3.1.3</version>
-          <dependencies>
-            <dependency>
-              <groupId>com.github.spotbugs</groupId>
-              <artifactId>spotbugs</artifactId>
-              <!-- Explicitly use version 3.1.3 of spotbugs because the 3.1.3 plugin uses spotbugs 3.1.2 which doesn't
-                   support Java 10 (https://github.com/spotbugs/spotbugs/issues/593) -->
-              <version>3.1.3</version>
-              <exclusions>
-                <exclusion>
-                  <groupId>xml-apis</groupId>
-                  <artifactId>xml-apis</artifactId>
-                </exclusion>
-              </exclusions>
-            </dependency>
-          </dependencies>
+          <version>3.1.11</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -435,15 +414,14 @@
             <linksource>true</linksource>
             <overview>overview.html</overview>
             <links>
-              <link>http://download.oracle.com/javase/10/docs/api</link>
-              <link>http://download.oracle.com/javaee/7/api</link>
+              <link>https://docs.oracle.com/en/java/javase/11/docs/api</link>
+              <link>https://docs.oracle.com/javaee/7/api/</link>
               <link>http://junit.org/junit4/javadoc/latest</link>
-              <link>http://www.gwtproject.org/javadoc/latest</link>
               <link>http://davidwhitlock.github.io/PortlandStateJava/apidocs</link>
             </links>
             <detectJavaApiLink/>
             <detectLinks/>
-            <additionalOptions>-html5 --add-modules java.xml.bind</additionalOptions>
+            <additionalOptions>-html5</additionalOptions>
           </configuration>
         </plugin>
         <plugin>
